libhid ChangeLog
================

2007-03-30 Albert Lee (trisk+alioth@acm.jhu.edu)
  - Remove internal copy of usb_dev_handle so that libhid builds with Solaris'
    libusb. [318]

2007-02-28  Martin F. Krafft (libhid@pobox.madduck.net)
  - Remove limitation for non-zero product IDs. Thanks Shahrouz Zolfaghari.
  - Add additional docbook location.

2007-02-27  Andreas Klöckner (lists@informa.tiker.net)
  - Various SWIG patches, including a more Pythonic libhid wrapper, and
    support for hid_strerror(). [304-314]
  - Other build system fixes. [312], [315]

2006-09-28  Charles Lepple (clepple+libhid@ghz.cc)
  - Added hid_strerror() for decoding return codes. [301]

2006-03-25  Charles Lepple (clepple+libhid@ghz.cc)
  - Added SWIG bindings for get/set feature report functions [298]

2006-03-13  Frédéric Leroy (fredo@starox.org)
  - added 2 functions in order to use feature item :
    hid_get_feature_report() and hid_set_feature_report() [296]

2006-01-26  Charles Lepple (clepple+libhid@ghz.cc)
  - More SWIG fixes; namely, hid_interrupt_read() and hid_get_input_report().
    [288],[291]
  - Uncommented hid_get_item_value() in hid.h [291]

2006-01-22  Charles Lepple (clepple+libhid@ghz.cc)
  - Merged in SWIG changes to make the Python bindings more useful.  This
    commit also had a few extra changes to some support programs and scripts,
    but those changes were not of great consequence. [284]

2005-12-31  Charles Lepple (clepple+libhid@ghz.cc)
  - Added check for return values in hid_open() and hid_force_open() to catch
    the case where the interface is claimed, but the report descriptor cannot
    be retrieved. [276]

2005-09-02  Charles Lepple (clepple+libhid@ghz.cc)
  - Added hid_interrupt_write() and hid_set_idle() functions. [256]
  - Added usb_strerror() calls to most of the hid_exchange functions to aid in
    debugging. [256]
  - Fixed dependencies on SWIG bindings [255]
  - Patched hidparser with fix applied to NUT (affects APC UPSes) [254]