@@ -1,7 +1,7 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
-AC_REVISION($Revision: 1.21 $)
+AC_REVISION($Rev$)
 AC_COPYRIGHT([Please see the ./COPYING file for license information.])
 
 AC_PREREQ(2.57)
@@ -15,7 +15,7 @@ AC_PREREQ(2.57)
 m4_define([LIBHID_VERSION], [0.2.16])
 m4_define([IFACE_AGE], [0])
 m4_define([BIN_AGE],   [0])
-m4_define([MD_INIT_NAME], m4_esyscmd([set -- `head -1 README` && echo $1 | tr -d "\n"]))
+m4_define([MD_INIT_NAME], [libhid])
 m4_define([MD_INIT_VERSION], LIBHID_VERSION.IFACE_AGE.BIN_AGE)
 m4_define([MD_INIT_ADDRESS], m4_esyscmd([grep -i bugreports\ to README | sed -e 's,.*<\([^>]*\).*,\1,' | tr -d "\n"]))
 
@@ -36,8 +36,11 @@ MD_ARG_ENABLE_CUSTOM(werror, compiler warnings as errors, yes)
 MD_ARG_ENABLE_CUSTOM(debug, debugging, no)
 MD_ARG_ENABLE_CUSTOM(gdbdebug, gdb-enhanced debugging symbols, no)
 
-MD_ARG_WITH_CUSTOM(ccache, ccache for compiler caching, [yes, if found])
-MD_ARG_WITH_CUSTOM(distcc, distcc for distributed compilation, [yes, if found])
+dnl ### If distcc and ccache are used via symlink farms (e.g. in
+dnl ###/usr/lib/ccache), then the following checks fail.
+dnl MD_ARG_WITH_CUSTOM(ccache, ccache for compiler caching, [yes, if found])
+dnl MD_ARG_WITH_CUSTOM(distcc, distcc for distributed compilation, [yes, if found])
+
 MD_ARG_WITH_CUSTOM(doxygen, documentation generated by doxygen, [yes, if found])
 
 # TODO: move to with
@@ -60,8 +63,8 @@ MD_CHECK_LIBUSB018B
 AC_PROG_CC
 MD_CHECK_GCC3
 
-MD_CONF_DISTCC
-MD_CONF_CCACHE
+dnl MD_CONF_DISTCC
+dnl MD_CONF_CCACHE
 
 AC_PROG_LIBTOOL
 AC_PROG_INSTALL
